# labor-union-parser

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  ci.yml
scripts/: build_fnum_lookup.py
src/labor_union_parser/: __init__.py  char_cnn.py  cli.py  conf.py  extractor.py  model.py  tokenizer.py
src/labor_union_parser/weights/: fnum_lookup.json  pretrained_embeddings.pt
tests/: test_cli.py  test_tokenizer.py
training/: __init__.py  evaluate.py  pretrain_embeddings.py  train.py  train_affiliation.py  train_common.py  train_designation.py  train_union.py
training/data/: nonunion_examples.csv  unions_model_missed.csv
