[project]
name = "labor-union-parser"
version = "0.1.0"
description = "Extract affiliation and local designation from labor union names"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["torch>=2.0", "click>=8.0", "tqdm>=4.0"]

[project.scripts]
labor-union-parser = "labor_union_parser.cli:main"

[project.optional-dependencies]
train = ["pandas", "scikit-learn"]
dev = ["pytest", "pre-commit", "black", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
labor_union_parser = ["weights/*.pt", "weights/*.json"]

[tool.ruff]
line-length = 88
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["labor_union_parser", "training"]
